Working code. Not much design.

--- a/index.html
+++ b/index.html
@@ -6,21 +6,19 @@
 
 </head>
 <body>
-	<div id="container">
-		<div id="inputForm">
-			<p>How many paragraphs do you want?</p>
-			<input type="text" id="myBtn" maxlength="2">
-			<input type="button"id="myBtn" value="Go!" onclick="runIt()">
-			<p id="return"></p>
-			<!-- <form id="formID" name="form">
-				<input type="text" id="form" maxlength="2" style="width: 30px;" name="userInput" />
-				<input type="submit" id="form" value="Submit" onclick=runit() />
-			</form>
-			<p id="return"></p> -->
+	<div id="wrapper">
+		<div id="container">
+			<div id="inputForm">
+				<p>How many paragraphs do you want?</p>
+				<input type="text" id="myBtn" maxlength="2">
+				<input type="button"id="myBtn" value="Go!" onclick="runIt()">
+				<p id="return"></p>
+			</div>
+		
+			<div id="output">
+				<span class="outputClass"></span>
+			</div>
 		</div>
-	</div>
-	<div id="output">
-		<span class="outputClass"></span>
 	</div>
 
 <script src="lorinipsum.js"></script>
