--- a/index.html
+++ b/index.html
@@ -9,9 +9,10 @@
 	<div id="wrapper">
 		<div id="container">
 			<div id="inputForm">
+				<h1 id="title">Lorin Ipsum</h1>
 				<p>How many paragraphs do you want?</p>
-				<input type="text" id="myBtn" maxlength="2">
-				<input type="button"id="myBtn" value="Go!" onclick="runIt()">
+				<input type="text" id="myBtn" class="textInput" maxlength="2">
+				<input type="button"id="myBtn" class="textButton" value="Go!" onclick="runIt()">
 				<p id="return"></p>
 			</div>
 		
