Got rid of my font, added Lato

--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 	<meta charset="utf-8">
 	<title>Lorin Ipsum</title>
 	<link rel="stylesheet" href="style.css">
-
+	<link href='http://fonts.googleapis.com/css?family=Lato:300,400,700,900,900italic' rel='stylesheet' type='text/css'>
 </head>
 <body>
 	<div id="wrapper">
 		<div id="container">
 			<div id="inputForm">
-				<h1 id="title">Lorin Ipsum</h1>
+				<h1 id="title"><i>Lorin</i> ipsum</h1>
 				<p>How many paragraphs do you want?</p>
 				<input type="text" id="myBtn" class="textInput" maxlength="2">
 				<input type="button"id="myBtn" class="textButton" value="Go!" onclick="runIt()">
